--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import '/css/all.css';
 @import '/css/index.css';
 @import '/css/menu-mobile.css';
+@import '/css/menu-fixo.css';
 @import '/css/tabMenu.css';
